# API

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt  lz4.lib
src/: CMakeLists.txt  common.hpp  dll_main.cpp
src/PacketParser/: ByteStream.cpp  CMakeLists.txt  CompressionHelper.cpp  CompressionHelper.hpp  Utils.hpp  VMT.hpp  common.hpp  hook.cpp
src/PacketParser/Packets/: C2S_ChatPacket.cpp  C2S_ChatPacket.hpp  GenericPacket.cpp  GenericPacket.hpp
src/network/: CompressionHelper.hpp  PacketParser.cpp  PacketParser.hpp  common.hpp  dll_main.cpp  hook.cpp  hook.hpp
src/network/Packets/: C2S_ChatPacket.cpp  C2S_ChatPacket.hpp  GenericPacket.cpp  GenericPacket.hpp  Packet.hpp
src/utility/: ByteStream.cpp  ByteStream.hpp  InstanceManager.cpp  InstanceManager.hpp  ProgramHeader.cpp  ProgramHeader.hpp  Utils.cpp  Utils.hpp  VMT.hpp  VtableDatabase.hpp
